exports[`AppTest Renders TextSelector 1`] = `
<div>
  <OAuth
    authCallback={[Function]} />
  <TextSelector
    isAuthenticated={false}
    onSelect={[Function]}
    options={Array []} />
</div>
`;

exports[`AppTest Renders TextSelector 2`] = `
<div>
  <OAuth
    authCallback={[Function]} />
  <TextSelector
    isAuthenticated={false}
    onSelect={[Function]}
    options={
      Array [
        Object {
          "name": "one",
          "value": "one",
        },
      ]
    } />
</div>
`;

exports[`AppTest Renders Typer after text is set 1`] = `
<div>
  <OAuth
    authCallback={[Function]} />
  <Typer
    fullText={
      Array [
        "H",
        "e",
        "l",
        "l",
        "o",
        " ",
        "w",
        "o",
        "r",
        "l",
        "d",
        "!",
      ]
    }
    onNewClick={[Function]} />
</div>
`;

exports[`AppTest Renders error view 1`] = `
<div>
  <OAuth
    authCallback={[Function]} />
  <div
    className="error-message">
    Something went wrong
  </div>
</div>
`;

exports[`AppTest Renders login link after getting the url 1`] = `
<div>
  <OAuth
    authCallback={[Function]} />
  <TextSelector
    isAuthenticated={false}
    onSelect={[Function]}
    options={Array []} />
</div>
`;
